tests/diagnostics/cases/parse/01_unclosed_paren.home
// Parse error: opening paren never closed.
fn main() {
    let v = (1 + 2
}
